<resources>
    <string name="app_name">SafetyAlarm</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="phone">Phone</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="emergency_contact_1">Emergency Contact 1</string>
    <string name="user_details">User Details</string>
</resources>