<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/safety_alarm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_name"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_vPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_password"
        android:layout_marginTop="10dp"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_vPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_bloodGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_phone"
        android:layout_marginTop="10dp"
        android:hint="@string/blood_group"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/edt_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_bloodGroup"
        android:layout_marginTop="10dp"
        android:hint="@string/gender"
        android:paddingLeft="13dp"
        android:background="@drawable/edt_background"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_gender"
        android:text="@string/sign_up"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>